# X02_Lite

./: CMakeLists.txt
include/: x02_utils.hpp
include/lcm_gen/: vr_lcm_recv.hpp
lib/lcm/: liblcm.so.1.5.0
models/X02Lite/: X02_Lite_teleop.xml  X02lite_V2.urdf
models/X02Lite/meshes/: L_Foerarm_Link.STL  L_ankle_pitch_Link.STL  L_elbow_Link.STL  L_hip_pitch_Link.STL  L_shoulder3_Link.STL  R_Forearm_Link.STL  R_knee_Link.STL  R_shoulder2_Link.STL  base_link.STL
models/X02_Lite/: X02lite_V2.urdf  X02lite_V2.xml  empty_world.xml
models/X02_Lite/meshes/: Hip_yaw_Link.STL  L_Wrist_Link.STL  L_hip_roll_Link.STL  L_knee_Link.STL  L_shoulder2_Link.STL  R_Wrist_Link.STL  R_ankle_pitch_Link.STL  R_elbow_Link.STL  R_hip_pitch_Link.STL  R_hip_roll_Link.STL  Waist_yaw_Link.STL  body_base_Link.STL  ziti_Link.STL
script/: build
src/: test.cpp  x02_utils.cpp
utils/: vr_lcm_recv.lcm
